--- a/menu.html
+++ b/menu.html
@@ -51,6 +51,7 @@
         <p class="card-text0">Hamburguesa</h5>
         <p class="card-text1">Completa</p>
         <p class="card-text2">Lechuga, tomate, queso</p>
+        <p class="card-text3" id="precioHamb">$ ---</p>
       </div>
     </div>
   </div>
@@ -62,6 +63,7 @@
         <p class="card-text0">Bife</h5>
         <p class="card-text1">Con papas fritas</p>
         <p class="card-text2">Pedilo cocido o jugoso</p>
+        <p class="card-text3" id="precioBife">$ ---</p>
       </div>
     </div>
   </div>
@@ -73,6 +75,7 @@
         <p class="card-text0">2 Panchos</h5>
         <p class="card-text1">Porque uno no alcanza</p>
         <p class="card-text2">Aderezos a elección</p>
+        <p class="card-text3" id="precioPanc">$ ---</p>
       </div>
     </div>
   </div>
@@ -84,6 +87,7 @@
         <p class="card-text0">Picada</h5>
         <p class="card-text1">Para compartir</p>
         <p class="card-text2">Fiambres y quesos</p>
+        <p class="card-text3" id="precioPica">$ ---</p>
       </div>
     </div>
   </div>
@@ -95,6 +99,7 @@
         <p class="card-text0">Tostado</h5>
         <p class="card-text1">Triple de miga</p>
         <p class="card-text2">Jamon y queso</p>
+        <p class="card-text3" id="precioTost">$ ---</p>
       </div>
     </div>
   </div>
@@ -106,6 +111,7 @@
         <p class="card-text0">Ensalada</h5>
         <p class="card-text1">Fresca para el verano</p>
         <p class="card-text2">Tomate, lechuga, cebolla</p>
+        <p class="card-text3" id="precioEnsa">$ ---</p>
       </div>
     </div>
   </div>
@@ -123,6 +129,7 @@
         <p class="card-text0">Gaseosa Cola</h5>
         <p class="card-text1">En un vaso de 300 cc</p>
         <p class="card-text2">normal, sin azucar o light</p>
+        <p class="card-text3" id="precioCoca">$ ---</p>
       </div>
     </div>
   </div>
@@ -134,9 +141,11 @@
         <p class="card-text0">Agua</h5>
         <p class="card-text1">Botellita 500 cc</p>
         <p class="card-text2">con o sin gas</p>
+        <p class="card-text3" id="precioAgua">$ ---</p>
       </div>
     </div>
   </div>
+
   <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 centered" >
     <div class="card">
       <img src="./imagenes/birra.jpg" class="card-img-top" alt="foto vasos cerveza">
@@ -144,6 +153,7 @@
         <p class="card-text0">Cerveza</h5>
         <p class="card-text1">Media pinta</p>
         <p class="card-text2">rubia o roja</p>
+        <p class="card-text3" id="precioCerv">$ ---</p>
       </div>
     </div>
   </div>
@@ -161,6 +171,7 @@
         <p class="card-text0">Flan</h5>
         <p class="card-text1">Con dulce de leche</p>
         <p class="card-text2">esponjoso y rico</p>
+        <p class="card-text3" id="precioFlan">$ ---</p>
       </div>
     </div>
   </div>
@@ -172,6 +183,7 @@
         <p class="card-text0">Ensalada de frutas</h5>
         <p class="card-text1">Con frutas de estación</p>
         <p class="card-text2">con o sin crema</p>
+        <p class="card-text3" id="precioFrut">$ ---</p>
       </div>
     </div>
   </div>
@@ -179,5 +191,6 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="./precios.js"></script>
 </body>
 </html>
