--- a/menu.html
+++ b/menu.html
@@ -63,7 +63,7 @@
         <p class="card-text0">Bife</h5>
         <p class="card-text1">Con papas fritas</p>
         <p class="card-text2">Pedilo cocido o jugoso</p>
-        <p class="card-text3" id="precioBife">$ ---</p>
+        <p class="card-text3" id="precioBife">consultar</p>
       </div>
     </div>
   </div>
@@ -75,7 +75,7 @@
         <p class="card-text0">2 Panchos</h5>
         <p class="card-text1">Porque uno no alcanza</p>
         <p class="card-text2">Aderezos a elección</p>
-        <p class="card-text3" id="precioPanc">$ ---</p>
+        <p class="card-text3" id="precioPanc">consultar</p>
       </div>
     </div>
   </div>
@@ -87,7 +87,7 @@
         <p class="card-text0">Picada</h5>
         <p class="card-text1">Para compartir</p>
         <p class="card-text2">Fiambres y quesos</p>
-        <p class="card-text3" id="precioPica">$ ---</p>
+        <p class="card-text3" id="precioPica">consultar</p>
       </div>
     </div>
   </div>
@@ -99,7 +99,7 @@
         <p class="card-text0">Tostado</h5>
         <p class="card-text1">Triple de miga</p>
         <p class="card-text2">Jamon y queso</p>
-        <p class="card-text3" id="precioTost">$ ---</p>
+        <p class="card-text3" id="precioTost">consultar</p>
       </div>
     </div>
   </div>
@@ -111,7 +111,7 @@
         <p class="card-text0">Ensalada</h5>
         <p class="card-text1">Fresca para el verano</p>
         <p class="card-text2">Tomate, lechuga, cebolla</p>
-        <p class="card-text3" id="precioEnsa">$ ---</p>
+        <p class="card-text3" id="precioEnsa">consultar</p>
       </div>
     </div>
   </div>
@@ -129,7 +129,7 @@
         <p class="card-text0">Gaseosa Cola</h5>
         <p class="card-text1">En un vaso de 300 cc</p>
         <p class="card-text2">normal, sin azucar o light</p>
-        <p class="card-text3" id="precioCoca">$ ---</p>
+        <p class="card-text3" id="precioCoca">consultar</p>
       </div>
     </div>
   </div>
@@ -141,7 +141,7 @@
         <p class="card-text0">Agua</h5>
         <p class="card-text1">Botellita 500 cc</p>
         <p class="card-text2">con o sin gas</p>
-        <p class="card-text3" id="precioAgua">$ ---</p>
+        <p class="card-text3" id="precioAgua">consultar</p>
       </div>
     </div>
   </div>
@@ -153,7 +153,7 @@
         <p class="card-text0">Cerveza</h5>
         <p class="card-text1">Media pinta</p>
         <p class="card-text2">rubia o roja</p>
-        <p class="card-text3" id="precioCerv">$ ---</p>
+        <p class="card-text3" id="precioCerv">consultar</p>
       </div>
     </div>
   </div>
@@ -171,7 +171,7 @@
         <p class="card-text0">Flan</h5>
         <p class="card-text1">Con dulce de leche</p>
         <p class="card-text2">esponjoso y rico</p>
-        <p class="card-text3" id="precioFlan">$ ---</p>
+        <p class="card-text3" id="precioFlan">consultar</p>
       </div>
     </div>
   </div>
@@ -183,7 +183,7 @@
         <p class="card-text0">Ensalada de frutas</h5>
         <p class="card-text1">Con frutas de estación</p>
         <p class="card-text2">con o sin crema</p>
-        <p class="card-text3" id="precioFrut">$ ---</p>
+        <p class="card-text3" id="precioFrut">consultar</p>
       </div>
     </div>
   </div>
