--- a/info.html
+++ b/info.html
@@ -19,13 +19,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="./index.html">Home</a>
+              <a class="nav-link" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./menu.html">Menu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./info.html">Info</a>
+              <a class="nav-link active" href="./info.html">Info</a>
             </li>
           </ul>
         </div>
