--- a/menu.html
+++ b/menu.html
@@ -19,10 +19,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="./index.html">Home</a>
+              <a class="nav-link" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./menu.html">Menu</a>
+              <a class="nav-link active" href="./menu.html">Menu</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./info.html">Info</a>
